# ccsm

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
ccsm/: __init__.py  __main__.py
ccsm/cli/: __init__.py  main.py
ccsm/core/: __init__.py  cluster.py  compact_parser.py  config.py  discovery.py  i18n.py  index.py  index_db.py  lineage.py  meta.py  milestones.py  parse_cache.py  parser.py  status.py  summarizer.py  workflow.py
ccsm/mcp/: __init__.py  server.py
ccsm/models/: __init__.py  session.py
ccsm/tui/: __init__.py  app.py
docs/: ccsm-product-review-guide.md
docs/history/: round_1.md  round_10.md  round_11.md  round_14.md  round_15.md  round_2.md  round_3.md  round_4.md  round_5.md  round_6.md  round_7.md  round_8.md  (+1 more)
hooks/: hooks.json
scripts/: mcp-shim.js  stop-hook.js  worker.js
tests/: test_acceptance.py  test_background_tasks.py  test_batch_render.py  test_cache_staleness.py  test_card_shimmer.py  test_cluster.py  test_compact_parser.py  test_default_light_theme.py  test_detail_chat_style.py  test_discovery_enhanced.py  test_e2e_pipeline.py  test_filter_lineage_preserved.py  test_index.py  test_index_db.py  test_inline_detail_panel.py  test_lineage.py  test_mcp_path_safety.py  test_meta.py  test_models.py  test_parse_cache.py  test_parser_enhanced.py  test_plugin_structure.py  test_search_debounce.py  test_session_detail_simplified.py  test_single_pass_integration.py  test_skills.py  test_title_priority.py  test_tui_interactions.py  test_workflow.py
web_demo/: index.html
(+41 files in other folders)
